update dto